egonlang-core/res/examples/invalid/const_decl_with_assign_chain_typed.eg
const a = b: Number = 123;

// out: SyntaxError: unexpected ":"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]